--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/BgFadeScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/BgFadeScriptCommandEditorView.axaml
@@ -21,7 +21,11 @@
             <controls:ItemLink Tabs="{Binding Tabs}" Item="{Binding Cg}"/>
         </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Text="{x:Static assets:Strings.Fade_Time__Frames_}"/>
+        <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal" Spacing="3">
+            <TextBlock VerticalAlignment="Center" Text="{x:Static assets:Strings.Fade_Time__Frames_}"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{x:Static assets:Strings.FramesToSecondsHelp}"/>
+        </StackPanel>
         <NumericUpDown Grid.Column="1" Grid.Row="2" Margin="10,0,0,0" Minimum="0" Maximum="100" Value="{Binding FadeTime}"
                        FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
     </Grid>
