--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/ScreenFadeOutScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/ScreenFadeOutScriptCommandEditorView.axaml
@@ -13,11 +13,19 @@
         <utility:SKAvaloniaColorConverter x:Key="ColorConverter"/>
     </UserControl.Resources>
     <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto">
-        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Fade_Time__Frames_}"/>
+        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" Spacing="3">
+            <TextBlock VerticalAlignment="Center" Text="{x:Static assets:Strings.Fade_Time__Frames_}"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{x:Static assets:Strings.FramesToSecondsHelp}"/>
+        </StackPanel>
         <NumericUpDown Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Minimum="0" Maximum="{Binding MaxShort}"
                        Value="{Binding FadeTime}" FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="{x:Static assets:Strings.Fade_Out_Percentage}"/>
+        <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal" Spacing="3">
+            <TextBlock VerticalAlignment="Center" Text="{x:Static assets:Strings.Fade_Out_Percentage}"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{x:Static assets:Strings.ScriptCommandParameterFadePercHelp}"/>
+        </StackPanel>
         <NumericUpDown Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" Minimum="0" Maximum="100"
                        Value="{Binding FadePercentage}" FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
 
@@ -38,7 +46,7 @@
         <StackPanel Grid.Column="0" Grid.Row="4" Orientation="Horizontal" Spacing="3">
             <TextBlock VerticalAlignment="Center" Text="{x:Static assets:Strings.Color}"/>
             <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
-                 ToolTip.Tip="{x:Static assets:Strings.ScriptCommandParameterHelpFadeColor}"/>
+                 ToolTip.Tip="{x:Static assets:Strings.ScriptCommandParameterHelpFadeOutColor}"/>
         </StackPanel>
         <ComboBox Grid.Column="1" Grid.Row="4" Margin="10,0,0,0" ItemsSource="{Binding Colors}" SelectedItem="{Binding Color}"/>
     </Grid>
