--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/SndPlayScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/SndPlayScriptCommandEditorView.axaml
@@ -29,7 +29,11 @@
         </StackPanel>
         <CheckBox Grid.Column="1" Grid.Row="3" Margin="10,0,0,0" IsChecked="{Binding LoadSound}"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" Text="{x:Static assets:Strings.Crossfade_Time__Frames_}"/>
+        <StackPanel Grid.Column="0" Grid.Row="4" Orientation="Horizontal" Spacing="3">
+            <TextBlock VerticalAlignment="Center" Text="{x:Static assets:Strings.Crossfade_Time__Frames_}"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{x:Static assets:Strings.FramesToSecondsHelp}"/>
+        </StackPanel>
         <NumericUpDown Grid.Column="1" Grid.Row="4" Margin="10,0,0,0" Value="{Binding CrossfadeTime}"
                        FormatString="N0" Increment="1" ParsingNumberStyle="Integer" Minimum="{Binding CrossfadeMin}" Maximum="{Binding CrossfadeMax}"
                        IsEnabled="{Binding !LoadSound}"/>
