--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/WaitCancelScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/WaitCancelScriptCommandEditorView.axaml
@@ -8,8 +8,12 @@
              x:DataType="vm:WaitCancelScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.WaitCancelScriptCommandEditorView">
     <Grid RowDefinitions="Auto" ColumnDefinitions="Auto,Auto">
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="{x:Static assets:Strings.Wait_Time__Frames_}"/>
-        <NumericUpDown Grid.Row="0" Grid.Column="1" Value="{Binding WaitTime}"
+        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" Spacing="3">
+            <TextBlock VerticalAlignment="Center" Text="{x:Static assets:Strings.Wait_Time__Frames_}"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{x:Static assets:Strings.FramesToSecondsHelp}"/>
+        </StackPanel>
+        <NumericUpDown Grid.Row="0" Grid.Column="1" Margin="10 0 0 0" Value="{Binding WaitTime}"
                        Minimum="0" Maximum="1023" FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
     </Grid>
 </UserControl>
