--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/WaitScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/WaitScriptCommandEditorView.axaml
@@ -8,7 +8,11 @@
              x:DataType="vm:WaitScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.WaitScriptCommandEditorView">
     <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto">
-        <TextBlock Grid.Row="0" VerticalAlignment="Center" Grid.Column="0" Text="{x:Static assets:Strings.Wait_Time__Frames_}"/>
+        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" Spacing="3">
+            <TextBlock VerticalAlignment="Center" Text="{x:Static assets:Strings.Wait_Time__Frames_}"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{x:Static assets:Strings.FramesToSecondsHelp}"/>
+        </StackPanel>
         <NumericUpDown Grid.Row="0" Margin="10,0,0,0" Grid.Column="1" Minimum="0" Maximum="1023" Value="{Binding WaitTime}"
                        FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
     </Grid>
