--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/LoadIsomapScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/LoadIsomapScriptCommandEditorView.axaml
@@ -4,12 +4,16 @@
              xmlns:vm="using:SerialLoops.ViewModels.Editors.ScriptCommandEditors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:assets="using:SerialLoops.Assets"
+             xmlns:controls="using:SerialLoops.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:LoadIsomapScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.LoadIsomapScriptCommandEditorView">
     <Grid RowDefinitions="Auto" ColumnDefinitions="Auto,Auto">
         <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Map}"/>
-        <ComboBox Grid.Column="1" Margin="10,0,0,0" ItemsSource="{Binding Maps}" SelectedItem="{Binding SelectedMap}"/>
+        <StackPanel Grid.Column="1" Margin="10,0,0,0" Orientation="Horizontal" Spacing="5">
+            <ComboBox ItemsSource="{Binding Maps}" SelectedItem="{Binding SelectedMap}"/>
+            <controls:ItemLink Tabs="{Binding ScriptEditor.Window.EditorTabs}" Item="{Binding SelectedMap}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
 
